Fixed mobile nav overlapping header

--- a/frontend/css/_navbar.scss
+++ b/frontend/css/_navbar.scss
@@ -6,7 +6,7 @@
   // height: 7dvh;
   min-height: 3.5rem;
   display: grid;
-  z-index: 1000;
+  z-index: 2;
   position: relative;
 
   grid-template-columns: 2fr 1fr 2fr;
@@ -21,12 +21,15 @@
   font-size: 1.5rem;
 }
 
-.logo__img {
-  height: 2.5rem;
-  max-height: 70%;
-  align-self: flex-start;
-  width: auto;
-  aspect-ratio: 1024 / 526;
+.logo {
+  display: inline-flex;
+  &__img {
+    height: 2.5rem;
+    max-height: 70%;
+
+    width: auto;
+    aspect-ratio: 1024 / 526;
+  }
 }
 
 @mixin active--state {
@@ -203,24 +206,26 @@
     }
 
     &__panel {
-      position: absolute;
+      position: fixed;
       background-color: var(--c-bg);
       left: 0;
       right: 0;
-      top: 100%;
-      transform: translateY(calc(-110%));
+      top: 7vh;
+      bottom: 0;
+      transform: translateY(calc(-120%));
       transition: transform 0.7s ease, opacity 0.7s ease;
       opacity: 0;
       will-change: transform;
-      z-index: 0;
+      z-index: 1;
       padding: 2rem 0;
+      font-size: 1.5rem;
 
       &.mobile-open {
         transform: translateY(0);
         opacity: 1;
       }
 
-      height: calc(100vh - 100%);
+      height: 93vh;
       // height: calc(100dvh - 100%);
       overflow-y: auto;
       // -webkit-overflow-scrolling: touch;
@@ -248,15 +253,8 @@
       }
 
       .settings {
-        &__btn {
-          display: none;
-        }
-        &-panel {
-          position: relative;
-          left: auto;
-          top: auto;
-          transform: none;
-        }
+        display: flex;
+        gap: variables.$spacer-2;
       }
     }
   }
